closed #4 - Alignment issue + refactoring

--- a/style/style.css
+++ b/style/style.css
@@ -48,6 +48,7 @@ h1#title {
 }
 
 #canvas {
+  position: relative;
   width: 800px;
   height: 600px;
 }
